Unzipping of files with ending .gz
Signed-off-by: PatrikBuhr <patrik.buhr@est.tech>
Issue-ID: NONRTRIC-773
Change-Id: I7de2f36aa1dde24a428485d50d03c78f832a8e97