@@ -73,14 +73,14 @@ public class FileStore implements DataStore {
         return fullName.substring(applicationConfig.getPmFilesPath().length());
     }
 
-    public Mono<String> readFile(String bucket, String fileName) {
+    public Mono<byte[]> readFile(String bucket, String fileName) {
         return Mono.error(new ServiceException("readFile from bucket Not implemented", HttpStatus.CONFLICT));
     }
 
     @Override
-    public Mono<String> readFile(Bucket bucket, String fileName) {
+    public Mono<byte[]> readFile(Bucket bucket, String fileName) {
         try {
-            String contents = Files.readString(path(fileName));
+            byte[] contents = Files.readAllBytes(path(fileName));
             return Mono.just(contents);
         } catch (Exception e) {
             return Mono.error(e);
